main.css
.site {
margin: 0 auto;
max-width: 960px;
/*max-width: 68.571428571rem;*/
overflow: hidden;
}

@media (max-width: 980px) {
  .site {
    max-width: 100%;
  }
}

body {
  font-family: "Segoe UI", "Trebuchet MS", Verdana, Helvetica, Sans-Serif;
  background: #073642;
  color: #002b36;
  font-size: 100%;
}

div {
  font-size: 100%;
  display: block;
}

.text {
  max-width: 800px;
  margin-top: 5pt;
  margin-bottom: 5pt;
}

.wrapper {
  margin: 0 auto; 
  min-height: 100%;
  background-color: #fdf6e3;
  -webkit-box-shadow: 0 0 8px 3px #93a1a1;
  -moz-box-shadow: 0 0 8px 3px #93a1a1;
  box-shadow: 0 0 8px 3px #93a1a1;
}

@media (min-width: 980px) {
  .wrapper {
    width: 960px;
    min-width: 760px;
  }
}

@media (max-width: 980px) {
  .wrapper {
    width: 100%;
  }
}

.maincol {
  padding: 10px 10px 10px 10px;
}

h1, h2, h3, h4, h5, h6 {
  font-weight: normal;
  margin: .6em 0;
}

h1 {
  font-size: 1.7em;
}
h2 {
  font-size: 1.7em;
}
h3 {
  font-size: 1.5em;
}
h4 {
  font-size: 1.4em;
}
h5 {
  font-size: 1.3em;
}
h6 {
  font-size: 1.2em;
}

h1.intro {
  margin: 0;
}

/* boxed inverted region mainly for code */
pre {
  width: 95%;
  font-size: .8em;
  font-family: 'andale mono', 'lucida console', monospace;
  white-space: pre;
  line-height: 1.5em;
  padding: .7em;
  color: #eee8d5;
  background-color: #002b36;
  border: 4px solid #93a1a1;
  border-radius: 5px;
  -moz-border-radius: 5px;
  -webkit-border-radius: 5px;
  box-shadow: 2px 2px 3px #839496;
  display: block;
  overflow: auto;
}

code {
  /*color: #fdf6e3;
  background-color: #073642;*/
  border: 1px solid #93a1a1;
  border-radius: 3px;
  -moz-border-radius: 3px;
  -webkit-border-radius: 3px;
  font-family: 'andale mono', 'lucida console', monospace;
  white-space: pre;
  padding: .05em .2em;
  margin: 0.1em 0.1em;
}

code.plus {
  color: white;
  background-color: green;
  padding: .2em .05em .2em .05em;
  border: 0;
  border-radius: 0;
  -moz-border-radius: 0;
  -webkit-border-radius: 0;
}

pre code {
  color: #eee8d5;
  background-color: #002b36;
  font-family: 'andale mono', 'lucida console', monospace;
  white-space: pre;
  padding: 0; /* padding is defined in 'pre' already */
  border: 0;
  border-radius: 0;
  -moz-border-radius: 0;
  -webkit-border-radius: 0;
  line-height: 1.5em;
}

/* exactly same as "code" */
pre.prettyprint {
  font-family: 'andale mono', 'lucida console', monospace;
  white-space: pre;
}

code.install {
  width: 50em;
  white-space: normal;
}

@media (max-width: 980px) {
  pre {
    max-width: 91%;
  }
}

img {
  border: 0;
  -ms-interpolation-mode: bicubic;
}

h1, h2 {
  margin-bottom: 5pt;
}

/* deprecation --> header h1 */
#h0 {
  margin-top: 0;
}

h1 {
  margin-top: 0;
}

.h0 {
  margin-top: 0;
}

.stext {
  max-width: 450px;
  font-size: .8em;
}

.rtext {
  text-align: right;
}

.snote {
  max-width: 650px;
  font-size: .8em;
  text-align: center;
}

.donatebox {
  width: 300px;
  background-color: #fdf6e3;
  -webkit-box-shadow: 0 0 8px 3px #93a1a1;
  -moz-box-shadow: 0 0 8px 3px #93a1a1;
  box-shadow: 0 0 8px 3px #93a1a1;
  padding: .5em;
}

table, tr, th, td {
  border-collapse: collapse;
  border: 1px solid black;
}

th, td {
  padding: 0.2em;
}

table.no-border {
  border: 0;
  border-spacing: 0;
  width: 100%;
}

table.no-border tr, table.no-border th, table.no-border td {
  border: 0;
  border-spacing: 0;
  padding: 0;
}

/* Middle
-----------------------------------------------------------------------------*/
.middle {
  width: 100%;
  padding: 0;
  position: relative;
  clear: both;
}
.middle:after {
  display: table;
  clear: both;
  content: '';
}
.container {
  width: 734px;
  float: right;
  overflow: hidden;
}
@media (max-width: 980px) {
  .container {
    width: 100%;
    float: left;
  }
}
.content {
  padding: 0;
}


/* Left Sidebar
-----------------------------------------------------------------------------*/
.left-sidebar {
  float: left;
  clear: left;
  padding: 0;
  margin: 0;
}

@media (max-width: 980px) {
  .left-sidebar {
    width: 95%;
  }
  .content {
    padding-left: 0;
  }
}


/* Footer
-----------------------------------------------------------------------------*/
.footer {
  margin-top: .6em;
  font-size: .8em;
  color: #fdf6e3;
}
#footertext {
  text-align: center;
}
#footermap {
  text-align: right;
}

/* Header and Social
-----------------------------------------------------------------------------*/
.header {
  height: 90px;
}
.header-left {
  float: left;
}
#header-line {
  background: #002b36;
  width: 100%;
  height: 1px;
  clear: both;
  float: left;
  margin-top: 10px;
}
#header-google {
  overflow: hidden;
  width:728px;
  height:90px;
  max-width: 100%;
  float: right;
  /* *
  background-color: blue;
  * */
}

div.h-logo {
  border: 0;
  width: 48px; height: 48px;
  float: left;
  margin-right: 0.5em;
}

div.h-title-desc {
  float: left;
  font: 28px 'Tahoma';
  min-width: 4em;
}

div.h-title-desc a {
  text-decoration: none;
}
div.h-title-desc a:hover {
  text-decoration: underline;
}
div.h-title-desc a:visited {
  color: #002b36;
}

div.h-title {
  border: 0; /* 1px solid red; */
  display: block;
  margin: 0;
  padding: 0;
  color: #000000;
  line-height: 100%;
  text-shadow: 0px 1px 0px #fff;
  text-align: center;
  min-width: 100%;
}

div.h-desc {
  border: 0; /* 1px solid red; */
  margin: 0;
  padding: 0px;
  font: 12px 'Tahoma';
  color: #000000;
  text-shadow: 0px 1px 0px #fff;
  text-align: center;
  min-width: 100%;
}

div.h-social {
  border: 0; /*1px solid red;*/
  display: block;
  clear: both;
  min-height: 32px;
  padding-top: 6px;
}

div.h-social a {
  border: 0;
  display: block;
  width: 32px;
  height: 32px;
  float: left;
  margin-right: 6px; /*6px 6px 0px 0px;*/
}

.h-facebook {
  background: url('/img/fb.png');
}
.h-twitter {
  background: url('/img/tw.png');
}
.h-gplus {
  background: url('/img/gp.png');
}
.h-facebook:hover, .h-twitter:hover, .h-gplus:hover {
  background-position: 0px -32px;
}

@media (max-width: 980px) {
  #header-google {
    /*
    max-width: 100%;
    */
    float: left;
    margin-top: 0.5em;
  }
  .header-left {
    width: 100%;
  }
  div.h-social {
    clear: none;
  }
  div.h-title-desc {
    margin-right: 0.6em;
  }
}

div.post_navigation, div.build_download {
  font-size: .8em;
  margin-bottom: 1em;
}

/* Menu and Search
-----------------------------------------------------------------------------*/
.block {
  margin: 10px 0px 5px 0px;
  width: 180px;
  background-color: #fdf6e3;
  box-shadow: 0 0 4px 1px #93a1a1;
  -webkit-box-shadow: 0 0 4px 1px #93a1a1;
  -moz-box-shadow: 0 0 4px 1px #93a1a1;
  border-radius: 5px;
  -moz-border-radius: 5px;
  -webkit-border-radius: 5px;
  padding: .5em;

  display: block;
  font-family: Tahoma, Arial;
  font-size: 90%;
  font-style: normal;
  font-variant: normal;
  font-weight: normal;
  line-height: normal;
  text-align: left;
}

@media (max-width: 980px) {
  .block {
    width: 100%;
  }
}

.blocktitle {
  font-family: Tahoma, Arial;
  font-size: 110%;
  font-stretch: normal;
  font-style: normal;
  font-variant: normal;
  font-weight: normal;
  padding: 0 0 5px 0;
  text-align: left;
  text-transform: uppercase;
}

.block ul {
  margin: 0;
  padding: 0;
  list-style: none;
}

.block li {
  line-height: 1.5em !important;
}

.block .MenuItemA {
  text-decoration: none !important;
}

#search-results {
  margin-top: 10px;
}

#search-field-div, #search-button-div {
  display: inline-block;
}
#search-field {
  max-width: 120px;
  height: 13pt;
}
@media (max-width: 980px) {
  #footer-links {
    margin-bottom: 1em;
  }
  #search-field-div {
    width: 98%;
    margin-bottom: 0.5em;
  }
  #search-field {
    width: 100%;
    max-width: 100%;
  }
  .blocktitle {
    padding: 0;
  }
  .block ul {
    padding-top: 0.4em;
    padding-bottom: 0.4em;
  }
  #breadcrumbs {
    padding-top: 0.7em;
    padding-bottom: 0.3em;
  }
}
#search-button {
  padding-left: 0.2em;
  padding-right: 0.2em;
  height: 17pt;
}



article img {
  max-width: 100%;
  max-height: 100%;
}

footer.read-also {
  margin-top: 2.5em;
  margin-bottom: 1em;
}

footer.read-also h2 {
  margin: 0;
}

footer.read-also ul {
  margin: 0.5em 0 0 0;
}

